--- a/style.css
+++ b/style.css
@@ -12,6 +12,57 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
 
+p {
+  font-family: 'Poppins', sans-serif; 
+  font-weight: 800;
+  font-style: normal;
+  transition: all 0.1s linear;
+  background-color: transparent;
+  color: #ff5757;
+  display: flex;
+  font-size: 40px;
+  text-transform: uppercase;
+  text-decoration: none;
+  min-width: 120px;
+  cursor: pointer;
+  margin: 10px 0; 
+  padding-top: 30px;
+  opacity: 0;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.5s ease-in forwards;
+}
+
+.fade-out {
+  animation: fadeOut 0.5s ease-out forwards;
+  display: none;
+}
+
+
+
 
 
 .front {
